fix copy{in,out}{,str}() to return the error returned by uvm_fault(). fixes PR 41813.